# SimpleGame

./: .gitignore  CMakeLists.txt  Project.cbp  Project.depend  Project.layout  README.md  main.cpp
enemy/: Enemy.txt
include/: Camera.h  Collision.h  Enemy.h  Global.h  Map.h  Player.h  ScreenManager.h
levels/: ColMap1.txt  ColMap2.txt  ColMap3.txt  Map1.txt  Map2.txt  Map3.txt
src/: Camera.cpp  Collision.cpp  Enemy.cpp  Map.cpp  Player.cpp  ScreenManager.cpp  main.cpp
